--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
@@ -5,9 +5,14 @@
   </configSections>
   
   
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow></configuration>
+  <stepAssemblies>
+      <!-- This attribute is required in order to use StepArgument Transformation as described here; 
+    https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  -->
+      <stepAssembly assembly="SpecFlow.Assist.Dynamic" />
+    </stepAssemblies></specFlow></configuration>
