--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/packages.config
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ImpromptuInterface" version="6.2.2" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net452" />
   <package id="Selenium.Support" version="3.11.2" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.11.2" targetFramework="net452" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net452" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
+  <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net452" />
 </packages>
