--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
@@ -2,17 +2,52 @@
 <configuration>
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+    <!--1. Specify Section name and class-->
+    <section name="log4net" type=" log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
-  
-  
   
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-<specFlow>
+  
+  <!--2. create section with configuration-->
+  <log4net>
+    <appender name ="ConsoleAppender" type =" log4net.Appender.ConsoleAppender">
+      <layout name ="PatternLayout" type ="log4net.Layout.PatternLayout">
+        <ConversionPattern value="%date{dd-MMM-yyyy-HH:mm:ss} [%class] [%level] [%method] - %message%newline" />
+      </layout>
+      <Threshold value="ERROR" />
+    </appender>
+    <appender name ="FileAppender" type ="log4net.Appender.FileAppender">
+      <layout name ="PatternLayout" type ="log4net.Layout.PatternLayout">
+        <ConversionPattern value="%date{dd-MMM-yyyy-HH:mm:ss} [%class] [%level] [%method] - %message%newline" />
+      </layout>
+      <Threshold value="INFO" />
+    <AppendToFile value="true"/>
+    <File value="AppFileLogger.log"/>
+    </appender>
+    <appender name ="RollingFileAppender" type ="log4net.Appender.RollingFileAppender">
+      <layout name ="PatternLayout" type ="log4net.Layout.PatternLayout">
+        <ConversionPattern value="%date{dd-MMM-yyyy-HH:mm:ss} [%class] [%level] [%method] - %message%newline" />
+      </layout>
+      <Threshold value="ALL" />
+    <AppendToFile value="true"/>
+    <File value="AppRollingFileLogger.log"/>
+    <MaximumFileSize value="1MB"/>
+    <MaxSizeRollBackups value="15"/>
+    </appender>
+
+    <!--3. Using root tag, specify the appender you want to use-->
+    <root>
+      <appender-ref ref="ConsoleAppender"/>
+      <appender-ref ref="FileAppender"/>
+      <appender-ref ref ="RollingFileAppender"/>
+    </root>
+  </log4net>
+  <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   <stepAssemblies>
       <!-- This attribute is required in order to use StepArgument Transformation as described here; 
     https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  -->
       <stepAssembly assembly="SpecFlow.Assist.Dynamic" />
-    </stepAssemblies></specFlow></configuration>
+   </stepAssemblies></specFlow></configuration>
