--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/NewToursFrameworkAndTest.csproj
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/NewToursFrameworkAndTest.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -78,6 +82,7 @@
     <Compile Include="Framework\Base.cs" />
     <Compile Include="Framework\BasePage.cs" />
     <Compile Include="Framework\BaseTest.cs" />
+    <Compile Include="Framework\Logger.cs" />
     <Compile Include="Framework\ReadConfigurationFile.cs" />
     <Compile Include="Pages\HomePage.cs" />
     <Compile Include="Program.cs" />
@@ -85,7 +90,9 @@
     <Compile Include="StepDefinitions\StepDefinition_HomePageMenus.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="FeatureFiles\HomePageMenus.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>HomePageMenus.feature.cs</LastGenOutput>
