--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/packages.config
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net452" />
