--- a/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
+++ b/NewToursFrameworkAndTest/NewToursFrameworkAndTest/App.config
@@ -9,6 +9,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="Browser" value="Chrome"/>
+    <add key="AppUrl" value="http://newtours.demoaut.com/mercurywelcome.php"/>
+  </appSettings>
   
   <!--2. create section with configuration-->
   <log4net>
